[gd_scene load_steps=54 format=3 uid="uid://df4ydop0drcb6"]

[ext_resource type="Script" path="res://Main/Data/Script/Player/movePlayer.gd" id="1_eyjuj"]
[ext_resource type="Script" path="res://Main/Data/Script/Player/objectInteraction.gd" id="3_xorse"]
[ext_resource type="PackedScene" uid="uid://b2jmi67en200t" path="res://Component/interaction_component.tscn" id="4_3kgx7"]
[ext_resource type="Texture2D" uid="uid://dx3dgt6ub6k0t" path="res://Asset/32x32white.png" id="4_ptfvr"]
[ext_resource type="Script" path="res://UI/UIHeldObject.gd" id="6_dthbu"]
[ext_resource type="Texture2D" uid="uid://dmf5862hccy1r" path="res://Asset/UI/object_show_back.png" id="7_acytv"]
[ext_resource type="Texture2D" uid="uid://dggtxkxvk3056" path="res://Asset/ShopItem/flask.png" id="8_lyy63"]
[ext_resource type="Theme" uid="uid://cyx5vjugx1lim" path="res://Theme/our_theme.tres" id="9_yx2nf"]
[ext_resource type="Texture2D" uid="uid://c58uj22u770w1" path="res://Asset/UI/ui_gold_back_side.png" id="10_1l1uj"]
[ext_resource type="Script" path="res://UI/UIGold.gd" id="10_bko3j"]
[ext_resource type="Texture2D" uid="uid://df160aemdaqim" path="res://Asset/UI/ui_value_gold.png" id="11_jadsf"]
[ext_resource type="Texture2D" uid="uid://bwkmwhg7gn8yi" path="res://Asset/UI/ui_value_silver.png" id="12_ohoaj"]
[ext_resource type="Texture2D" uid="uid://di0q3sninmdyc" path="res://Asset/UI/ui_value_copper.png" id="13_8g8ft"]
[ext_resource type="Script" path="res://UI/UIStandInfo.gd" id="14_4wo3i"]
[ext_resource type="Texture2D" uid="uid://dwrt2o76g30yv" path="res://Asset/Player/body_walk_front.png" id="15_kksdh"]
[ext_resource type="PackedScene" uid="uid://dlfjevtir6k4b" path="res://Component/animation_component.tscn" id="15_rkxlj"]
[ext_resource type="Texture2D" uid="uid://mq6dwpbl0re2" path="res://Asset/Player/body_walk_back.png" id="16_q0bnb"]
[ext_resource type="Texture2D" uid="uid://t6r1syq2kits" path="res://Asset/Player/body_walk_right.png" id="17_tp4rr"]
[ext_resource type="Texture2D" uid="uid://cn0m705m0n0j8" path="res://Asset/Player/cloth_walk_front.png" id="18_hcxc6"]
[ext_resource type="Texture2D" uid="uid://bk0hcwaukf0vi" path="res://Asset/Player/cloth_walk_back.png" id="19_irttg"]
[ext_resource type="Texture2D" uid="uid://byvgq0h8vifn" path="res://Asset/Player/cloth_walk_right.png" id="20_ucn48"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ijf8t"]
radius = 4.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eetes"]
size = Vector2(22, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_28n7l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_22vvv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y64r6"]
atlas = ExtResource("15_kksdh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyjbh"]
atlas = ExtResource("15_kksdh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc2ab"]
atlas = ExtResource("15_kksdh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmid0"]
atlas = ExtResource("15_kksdh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5crfe"]
atlas = ExtResource("15_kksdh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03umj"]
atlas = ExtResource("16_q0bnb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_106id"]
atlas = ExtResource("16_q0bnb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rua8"]
atlas = ExtResource("16_q0bnb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xes3c"]
atlas = ExtResource("16_q0bnb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7byx"]
atlas = ExtResource("17_tp4rr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_olcds"]
atlas = ExtResource("17_tp4rr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qtqq"]
atlas = ExtResource("17_tp4rr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv8nv"]
atlas = ExtResource("17_tp4rr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cmb2v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y64r6")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyjbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc2ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmid0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5crfe")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03umj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_106id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rua8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xes3c")
}],
"loop": true,
"name": &"walking_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7byx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olcds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qtqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv8nv")
}],
"loop": true,
"name": &"walking_horizontal",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nktdc"]
atlas = ExtResource("18_hcxc6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_552u0"]
atlas = ExtResource("18_hcxc6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikt58"]
atlas = ExtResource("18_hcxc6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwx5p"]
atlas = ExtResource("18_hcxc6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4028u"]
atlas = ExtResource("18_hcxc6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81lx2"]
atlas = ExtResource("19_irttg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl10a"]
atlas = ExtResource("19_irttg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7k0k"]
atlas = ExtResource("19_irttg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ora4c"]
atlas = ExtResource("19_irttg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mt58"]
atlas = ExtResource("20_ucn48")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnuis"]
atlas = ExtResource("20_ucn48")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqw32"]
atlas = ExtResource("20_ucn48")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq4wx"]
atlas = ExtResource("20_ucn48")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qq12i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nktdc")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_552u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikt58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwx5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4028u")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81lx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl10a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7k0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ora4c")
}],
"loop": true,
"name": &"walking_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mt58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnuis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqw32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq4wx")
}],
"loop": true,
"name": &"walking_horizontal",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 224

[node name="Collision" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ijf8t")

[node name="MovePlayer" type="Node2D" parent="." node_paths=PackedStringArray("player", "animation_component")]
script = ExtResource("1_eyjuj")
player = NodePath("..")
animation_component = NodePath("../AnimationComponent")

[node name="HandleObject" type="Node2D" parent="." node_paths=PackedStringArray("held_object_ui", "stand_info_ui", "interaction_component", "move_component")]
position = Vector2(0, -14)
script = ExtResource("3_xorse")
held_object_ui = NodePath("../FixedUIHeldObject")
stand_info_ui = NodePath("../UIStandInfo")
interaction_component = NodePath("../InteractionComponent")
move_component = NodePath("../MovePlayer")

[node name="InteractionComponent" parent="." instance=ExtResource("4_3kgx7")]
position = Vector2(0, -14)
collision_mask = 192

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponent"]
position = Vector2(19, 0)
shape = SubResource("RectangleShape2D_eetes")

[node name="test" type="Sprite2D" parent="InteractionComponent/CollisionShape2D"]
modulate = Color(1, 1, 1, 0.392157)
scale = Vector2(0.6875, 0.8125)
texture = ExtResource("4_ptfvr")

[node name="InteractTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="FlashHeldObjectUITimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FixedUIHeldObject" type="CanvasLayer" parent="." node_paths=PackedStringArray("item_icon", "item_current_amount", "item_amount")]
layer = 0
script = ExtResource("6_dthbu")
item_icon = NodePath("DisplayContainer/Display/HBoxContainer/ItemIcon")
item_current_amount = NodePath("DisplayContainer/Display/HBoxContainer/VBoxContainer/ItemCurrentAmount")
item_amount = NodePath("DisplayContainer/Display/HBoxContainer/VBoxContainer2/ItemAmount")

[node name="DisplayContainer" type="PanelContainer" parent="FixedUIHeldObject"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 320.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_28n7l")

[node name="Background" type="TextureRect" parent="FixedUIHeldObject/DisplayContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("7_acytv")

[node name="Display" type="MarginContainer" parent="FixedUIHeldObject/DisplayContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="FixedUIHeldObject/DisplayContainer/Display"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemIcon" type="TextureRect" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_lyy63")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemCurrentAmount" type="Label" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("9_yx2nf")
theme_override_colors/font_outline_color = Color(0.243137, 0.537255, 0.282353, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 40
text = "48
"
horizontal_alignment = 2

[node name="Control2" type="Control" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemAmount" type="Label" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("9_yx2nf")
theme_override_colors/font_outline_color = Color(0.243137, 0.537255, 0.282353, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 40
text = "/48
"

[node name="Control2" type="Control" parent="FixedUIHeldObject/DisplayContainer/Display/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="FixedUIGold" type="CanvasLayer" parent="." node_paths=PackedStringArray("gold_label", "silver_label", "copper_label", "color_flash_timer")]
layer = 0
script = ExtResource("10_bko3j")
gold_label = NodePath("GoldUI/MarginContainer/GridContainer/GoldValue")
silver_label = NodePath("GoldUI/MarginContainer/GridContainer/SilverValue")
copper_label = NodePath("GoldUI/MarginContainer/GridContainer/CopperValue")
color_flash_timer = NodePath("ColorFlashTimer")

[node name="GoldUI" type="PanelContainer" parent="FixedUIGold"]
offset_left = 32.0
offset_top = -96.0
offset_right = 272.0
offset_bottom = 384.0
theme = ExtResource("9_yx2nf")
theme_override_styles/panel = SubResource("StyleBoxTexture_22vvv")

[node name="Back" type="TextureRect" parent="FixedUIGold/GoldUI"]
layout_mode = 2
texture = ExtResource("10_1l1uj")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="FixedUIGold/GoldUI"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 192
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="FixedUIGold/GoldUI/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
columns = 2

[node name="GoldIcon" type="TextureRect" parent="FixedUIGold/GoldUI/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("11_jadsf")
expand_mode = 1
stretch_mode = 5

[node name="GoldValue" type="Label" parent="FixedUIGold/GoldUI/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.156863, 0.196078, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "110"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SilverIcon" type="TextureRect" parent="FixedUIGold/GoldUI/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("12_ohoaj")
expand_mode = 1
stretch_mode = 5

[node name="SilverValue" type="Label" parent="FixedUIGold/GoldUI/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.156863, 0.196078, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "199"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CopperIcon" type="TextureRect" parent="FixedUIGold/GoldUI/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("13_8g8ft")
expand_mode = 1
stretch_mode = 5

[node name="CopperValue" type="Label" parent="FixedUIGold/GoldUI/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.156863, 0.196078, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ColorFlashTimer" type="Timer" parent="FixedUIGold"]

[node name="UIStandInfo" type="CanvasLayer" parent="." node_paths=PackedStringArray("buildNameLabel", "itemNameLabel", "marketValueLabel", "currentValueLabel")]
layer = 0
visible = false
script = ExtResource("14_4wo3i")
buildNameLabel = NodePath("InfoContainer/MarginContainer/VBoxContainer/BuildNameLayer/BuildName")
itemNameLabel = NodePath("InfoContainer/MarginContainer/VBoxContainer/ItemNameLayer/ItemName")
marketValueLabel = NodePath("InfoContainer/MarginContainer/VBoxContainer/MarketValueLayer/MarketValue")
currentValueLabel = NodePath("InfoContainer/MarginContainer/VBoxContainer/CurrentValueLayer/CurrentValue")

[node name="InfoContainer" type="PanelContainer" parent="UIStandInfo"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -244.0
offset_right = 285.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("9_yx2nf")

[node name="MarginContainer" type="MarginContainer" parent="UIStandInfo/InfoContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UIStandInfo/InfoContainer/MarginContainer"]
layout_mode = 2

[node name="BuildNameLayer" type="HBoxContainer" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Des" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/BuildNameLayer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 2.0
theme = ExtResource("9_yx2nf")
theme_override_font_sizes/font_size = 24
text = "Building Type:
"
horizontal_alignment = 2

[node name="BuildName" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/BuildNameLayer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource("9_yx2nf")
theme_override_font_sizes/font_size = 24
text = "Stand"

[node name="ItemNameLayer" type="HBoxContainer" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Des" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ItemNameLayer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 2.0
theme = ExtResource("9_yx2nf")
theme_override_font_sizes/font_size = 24
text = "Current Item:
"
horizontal_alignment = 2

[node name="ItemName" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ItemNameLayer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource("9_yx2nf")
theme_override_font_sizes/font_size = 24
text = "Water
"

[node name="Space" type="Control" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarketValueLayer" type="HBoxContainer" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Des" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/MarketValueLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Market Prize:"
horizontal_alignment = 1

[node name="MarketValue" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/MarketValueLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "70"
horizontal_alignment = 1

[node name="CurrentValueLayer" type="HBoxContainer" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Des" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/CurrentValueLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Current Prize:"
horizontal_alignment = 1

[node name="CurrentValue" type="Label" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/CurrentValueLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "70"
horizontal_alignment = 1

[node name="Space2" type="Control" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonLayer" type="HBoxContainer" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TenLess" type="Button" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-10%"

[node name="OneLess" type="Button" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-1
"

[node name="MarketPrizeReset" type="Button" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset
"

[node name="OneMore" type="Button" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+1
"

[node name="TenMore" type="Button" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+10%"

[node name="Space3" type="Control" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseLayer" type="HBoxContainer" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Space" type="Control" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/CloseLayer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="Close" type="Button" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/CloseLayer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
text = "Close
"

[node name="Space2" type="Control" parent="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/CloseLayer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("cloth_animation", "animation_player_list") instance=ExtResource("15_rkxlj")]
cloth_animation = NodePath("ClothAnimation")
animation_player_list = [NodePath("BodyAnimation"), NodePath("ClothAnimation")]
is_default_color = true

[node name="BodyAnimation" type="AnimatedSprite2D" parent="AnimationComponent"]
sprite_frames = SubResource("SpriteFrames_cmb2v")
animation = &"walking"
frame_progress = 0.947517
offset = Vector2(0, -15)
flip_h = true

[node name="ClothAnimation" type="AnimatedSprite2D" parent="AnimationComponent"]
sprite_frames = SubResource("SpriteFrames_qq12i")
animation = &"walking"
frame = 3
frame_progress = 0.215048
offset = Vector2(0, -15)
flip_h = true

[connection signal="timeout" from="InteractTimer" to="HandleObject" method="_on_fill_shelf_timer_timeout"]
[connection signal="timeout" from="FlashHeldObjectUITimer" to="FixedUIHeldObject" method="_on_flash_held_object_ui_timer_timeout"]
[connection signal="timeout" from="FixedUIGold/ColorFlashTimer" to="FixedUIGold" method="_on_color_flash_timer_timeout"]
[connection signal="closed_stand_info" from="UIStandInfo" to="MovePlayer" method="_on_ui_stand_info_closed_stand_info"]
[connection signal="opened_stand_info" from="UIStandInfo" to="MovePlayer" method="_on_ui_stand_info_opened_stand_info"]
[connection signal="button_down" from="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer/TenLess" to="UIStandInfo" method="_on_ten_less_button_down"]
[connection signal="button_down" from="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer/OneLess" to="UIStandInfo" method="_on_one_less_button_down"]
[connection signal="button_down" from="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer/MarketPrizeReset" to="UIStandInfo" method="_on_market_prize_reset_button_down"]
[connection signal="button_down" from="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer/OneMore" to="UIStandInfo" method="_on_one_more_button_down"]
[connection signal="button_down" from="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/ButtonLayer/TenMore" to="UIStandInfo" method="_on_ten_more_button_down"]
[connection signal="button_down" from="UIStandInfo/InfoContainer/MarginContainer/VBoxContainer/CloseLayer/Close" to="UIStandInfo" method="_on_close_button_down"]
